card spacing issue

--- a/stories/Organism/Blocks/FeaturedContentCard/PagewideContentCard/pagewidecard.scss
+++ b/stories/Organism/Blocks/FeaturedContentCard/PagewideContentCard/pagewidecard.scss
@@ -34,6 +34,12 @@
   &__image-link {
     @extend %img_none;
   }
+
+  .button-primary{
+    @include devicebreak(medium){
+      margin: 0 1.5rem;
+    }
+  }
 }
 
 .wide-card__description {
